Update target date and product details in index.html

--- a/id/mobilelegends/index.html
+++ b/id/mobilelegends/index.html
@@ -272,7 +272,7 @@
         document.addEventListener('dragstart', event => event.preventDefault());
 
         // --- 1. PENGATURAN FLASH SALE ---
-        const targetDate = new Date("2025-01-30 00:00:00").getTime(); 
+        const targetDate = new Date("2026-01-30 00:00:00").getTime(); 
 
         function startCountdown() {
             const timerInterval = setInterval(function() {
@@ -305,7 +305,7 @@
         // --- 2. DATA PRODUK ---
         const products = [
             // FLASH SALE
-            { id: 1, type: 'flash', name: "Weekly Diamond Pass x1", price: 27000, oldPrice: 30000, stock: 1, icon: "https://iili.io/f8udNZN.png" },
+            { id: 1, type: 'flash', name: "Super Value Pass", price: 15000, oldPrice: 30000, stock: 100, icon: "https://iili.io/fUzFpjf.th.png" },
             // FIRST TOP UP
             { id: 3, type: 'first', name: "100 (50+50) Diamonds", price: 16000, icon: "https://iili.io/f8ZJnjt.png" },
             { id: 4, type: 'first', name: "300 (150+150) Diamonds", price: 43000, icon: "https://iili.io/f8ZJnjt.png" },
