--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
     <meta name="description" content="TopUp hemat? Di TOKOARDAN lah!">
 
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://tokoardan.com/">
+    <meta property="og:url" content="https://tokoardan.webhop.me/">
     <meta property="og:title" content="TOKOARDAN - INDONESIA">
     <meta property="og:description" content="TopUp hemat? Di TOKOARDAN lah!">
-    <meta property="og:image" content="https://i.ibb.co.com/Q7KZ78h8/background-removed-1769186041755.webp">
+    <meta property="og:image" content="https://i.ibb.co.com/CpyhrYSN/Proyek-Baru-25-3-EB4311.png">
 
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:title" content="TOKOARDAN - INDONESIA">
     <meta property="twitter:description" content="TopUp hemat? Di TOKOARDAN lah!">
-    <meta property="twitter:image" content="https://i.ibb.co.com/Q7KZ78h8/background-removed-1769186041755.webp">
+    <meta property="twitter:image" content="https://i.ibb.co.com/CpyhrYSN/Proyek-Baru-25-3-EB4311.png">
 
     <link rel="icon" href="https://i.ibb.co.com/CpyhrYSN/Proyek-Baru-25-3-EB4311.png" type="image/webp">
     <link rel="shortcut icon" href="https://i.ibb.co.com/CpyhrYSN/Proyek-Baru-25-3-EB4311.png" type="image/webp">
