Enhance SEO with updated title and meta tags
Updated the title and meta tags for better SEO and clarity.

--- a/index.html
+++ b/index.html
@@ -4,18 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <title>TOKOARDAN - INDONESIA</title>
-    <meta name="description" content="TopUp hemat? Di TOKOARDAN lah!">
+    <title>TOKOARDAN - Pusat Top Up Game Termurah & Aman Indonesia</title>
+
+    <meta name="description" content="Pusat Top Up Game Termurah & Terpercaya. Beli Robux, Diamond MLBB, dan Voucher Game Hemat. Proses Kilat 1 Detik, 100% Legal & Aman hanya di TOKOARDAN.">
+
+    <meta name="keywords" content="Top Up Murah, TOKOARDAN, Jual Robux Murah, Top Up Roblox, Diamond Mobile Legends, Top Up ML, Voucher Game Indonesia, Top Up Terpercaya, Reseller Top Up, Joki Mobile Legends">
+
+    <meta name="author" content="TOKOARDAN">
+    <meta name="robots" content="index, follow">
 
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://tokoardan.webhop.me/">
-    <meta property="og:title" content="TOKOARDAN - INDONESIA">
-    <meta property="og:description" content="TopUp hemat? Di TOKOARDAN lah!">
+    <meta property="og:title" content="TOKOARDAN - Top Up Game Hemat & Kilat">
+    <meta property="og:description" content="Mau Top Up Murah & Aman? Di TOKOARDAN aja! Proses 1 Detik, 100% Legal. Klik Disini!">
     <meta property="og:image" content="https://i.ibb.co.com/CpyhrYSN/Proyek-Baru-25-3-EB4311.png">
 
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:title" content="TOKOARDAN - INDONESIA">
-    <meta property="twitter:description" content="TopUp hemat? Di TOKOARDAN lah!">
+    <meta property="twitter:title" content="TOKOARDAN - Top Up Game Hemat & Kilat">
+    <meta property="twitter:description" content="Mau Top Up Murah & Aman? Di TOKOARDAN aja! Proses 1 Detik, 100% Legal.">
     <meta property="twitter:image" content="https://i.ibb.co.com/CpyhrYSN/Proyek-Baru-25-3-EB4311.png">
 
     <link rel="icon" href="https://i.ibb.co.com/CpyhrYSN/Proyek-Baru-25-3-EB4311.png" type="image/webp">
