Update Open Graph and Twitter descriptions

--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://tokoardan.webhop.me/">
     <meta property="og:title" content="TOKOARDAN - Top Up Game Hemat & Kilat">
-    <meta property="og:description" content="Mau Top Up Murah & Aman? Di TOKOARDAN aja! Proses 1 Detik, 100% Legal. Klik Disini!">
+    <meta property="og:description" content="Mau Top Up Murah & Aman? Di TOKOARDAN aja! Proses Gak lama dong, 100% Legal. Klik Disini!">
     <meta property="og:image" content="https://i.ibb.co.com/CpyhrYSN/Proyek-Baru-25-3-EB4311.png">
 
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:title" content="TOKOARDAN - Top Up Game Hemat & Kilat">
-    <meta property="twitter:description" content="Mau Top Up Murah & Aman? Di TOKOARDAN aja! Proses 1 Detik, 100% Legal.">
+    <meta property="twitter:description" content="Mau Top Up Murah & Aman? Di TOKOARDAN aja! Proses Gak lama dong, 100% Legal.">
     <meta property="twitter:image" content="https://i.ibb.co.com/CpyhrYSN/Proyek-Baru-25-3-EB4311.png">
 
     <link rel="icon" href="https://i.ibb.co.com/CpyhrYSN/Proyek-Baru-25-3-EB4311.png" type="image/webp">
