--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta name="robots" content="index, follow">
 
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://tokoardan.webhop.me/">
+    <meta property="og:url" content="https://tokoardan.my.id/">
     <meta property="og:title" content="TOKOARDAN - Top Up Game Hemat & Kilat">
     <meta property="og:description" content="Mau Top Up Murah & Aman? Di TOKOARDAN aja! Proses Gak lama dong, 100% Legal. Klik Disini!">
     <meta property="og:image" content="https://i.ibb.co.com/CpyhrYSN/Proyek-Baru-25-3-EB4311.png">
